[package]
name = "netmap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35"
ipnetwork = "0.20"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
rayon = "1"
dns-lookup = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
